# pacman-reports

./: .gitignore  CMakeLists.txt  D31.tex  D42.tex  MS42.tex  README.md  README02.md  pacmanreport.cls
D31/: CMakeLists.txt  D31.tex  pacmanreport.cls
D31/bibliography/: D31.bib  marco.bib
D31/inputFiles/: ActiveGatheringOfFrictionalPropertiesFromObjects.tex  LearningHapticCharacteristicsObjectsExplorationInHand.tex  ReconstructionPosturesImuMeasurements.tex  SoftHandWithSenseOfTouch.tex
D42/: CMakeLists.txt  D42.tex  pacmanreport.cls  pacmanreport_INSTALLATION_SPECIFIC_NOT_WORKING.cls
D42/bibliography/: D42.bib  abbreviations.bib  marco.bib
D42/inputFiles/: ComputationalFramework.tex  GraspPlanningBoundingBoxes.tex  GraspingNovelObjects.tex  (+5 more)
DR13/: CMakeLists.txt  DR13.tex
DR21/: CMakeLists.txt  DR2.1.tex  DR21.tex  DR21.tex.backup
DR22/: .gitignore  CMakeLists.txt  DR22.tex
DR31/: CMakeLists.txt  DR31.tex
DR32/: CMakeLists.txt  DR32.tex
DR42/: CMakeLists.txt  DR42.tex
DR43/: CMakeLists.txt  DR43.tex  pacmanreport.cls
DR54/: CMakeLists.txt  DR54.tex
DR55/: CMakeLists.txt  DR55.tex
MS13/: CMakeLists.txt  MS13.tex
MS42/: CMakeLists.txt  MS42.aux  MS42.fdb_latexmk  MS42.out  MS42.tex  conclusions.tex  controllers.tex  hwinterface.tex  intro.tex  issues.tex  kuka.tex  software.tex  tests.tex  tikz_definitions.tex
MS43/: CMakeLists.txt  MS43.tex
cmake/: UseLATEX.cmake
template/: template.pacman-deliverable.tex  template.pacman-milestone.tex
templates/: pacmanreport.cls  template.pacman-deliverable.tex  template.pacman-milestone.tex
(+90 files in other folders)
